# bootloader43xx_sdcard

./: .gitignore  CMakeLists.txt  LICENSE  README.md  board_config.cmake.example  link.ld  toolchain-gcc-arm-embedded.cmake
cmake/: version.cmake
src/: board.c  board.h  board_config.h  bootloader.h  bootloader_meta.c  firmware_update.c  firmware_update.h  flash.c  flash.h  flash_addresses.h  fs_mci.c  fsmci_cfg.h  hash.c  hash.h  main.c  mbedtls_cfg.h  sdcard.c  sdcard.h
src/board_config/: board_GPIO_ID.h
src/board_config/3801/: board_config.c  board_config_v2.c  board_config_v5.c  board_config_v6.c
src/board_config/3805/: board_config.c  board_config_v0.c  board_config_v1.c
